Trying to diagnose mobile spacing issues.

--- a/src/scss/elements/native.scss
+++ b/src/scss/elements/native.scss
@@ -7,6 +7,8 @@ body {
     font-size: 16px;
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    width: 100%;
 }
 
 p {
